@@ -1,6 +1,7 @@
 # Version 2.4
 - Adding Login window support
 - Adding Russian translation (Thanks to blogdron)
+- Bugfix: Time period calculation on locations near the dateline, like Japan
 
 # Version 2.3
 - Adding Dutch translation
